# Example_code

./: CMakeLists.txt  README.md
inc/: Line.h  Point.h  Triangle.h  Vector2D.h  test.h
src/: Line.cpp  Point.cpp  Triangle.cpp  Vector2D.cpp  main.cpp  test.cpp
